feat: improved ownership checking
